--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fff9a6</color>
-    <color name="colorPrimaryDark">#f179f7</color>
+    <color name="colorPrimary">#eb34df</color>
+    <color name="colorPrimaryDark">#34ebd8</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
