--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -27,8 +27,10 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:textSize="26sp"
-        android:textColor="#0FFF"
+        android:textColor="#FFF"
         android:inputType="textMultiLine"
+        android:scrollHorizontally="false"
+        android:maxLines="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
