--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -32,7 +32,7 @@
         android:text="@string/defaultSpeechToText"
         android:textColor="#FFF"
         android:textSize="20sp"
-        android:background="@android:color/holo_green_light"
+        android:background="#177E80"
         app:layout_constraintBottom_toBottomOf="@+id/camera_texture_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
